force-app/main/default/objects/MCA_Configuration__c/MCA_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>MCA Configuration</label>
</CustomObject>