force-app/main/default/objects/MCA_Configuration__c/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Address</label>
    <type>TextArea</type>
</CustomField>