force-app/main/default/objects/MCA_Configuration__c/fields/Email_Statement_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Statement_File_Name__c</fullName>
    <description>MCA Email Statement attachment name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>MCA Email Statement attachment name</inlineHelpText>
    <label>Email Statement File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>