force-app/main/default/objects/MCA_Configuration__c/fields/Org_Wide_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_From_Address__c</fullName>
    <description>From address to send Email Statement to accounts</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>From address to send Email Statement to accounts</inlineHelpText>
    <label>Org Wide From Address</label>
    <type>Email</type>
</CustomField>