force-app/main/default/objects/MCA_Configuration__c/fields/Send_Email_Statements__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to send email statement PDFs to accounts</description>
    <inlineHelpText>Checkbox to send email statement PDFs to accounts</inlineHelpText>
    <label>Send Email Statements</label>
    <type>Checkbox</type>
</CustomField>